# rust-backend

./: Makefile
.sqlx/: query-7355f35e2767ea4b7f82dfabd8bdb29661f33ad2588176c032d099c784d4936c.json  query-b5be5c06e2757a019df61dd51e19ace03ce2c09ba910954625beada6867b0ece.json
backend/: .env  .gitignore  Cargo.toml
backend/.sqlx/: query-226e3b2a3766447a75722c5f1a484c5271a23ee883e5e0df0194c75e87d4ca79.json
backend/src/models/: user.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: counter.rs  create_user_form.rs  mod.rs  user_details.rs
src/: main.rs
src/db/: mod.rs
src/handlers/: mod.rs
