# // Cargo.toml
[package]
name = "user-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
env_logger = "0.10"
log = "0.4"
actix-cors = "0.7.0"
